--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.camera:camera-camera2:1.1.0-alpha03'
+    implementation 'androidx.camera:camera-camera2:1.1.0-alpha04'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -58,7 +58,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.6"
 
     //Firebase
-    implementation 'com.google.firebase:firebase-auth:20.0.3'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
     implementation 'com.google.firebase:firebase-messaging:21.1.0'
@@ -92,15 +92,15 @@ dependencies {
     //ML Kit Text Recognition
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.3'
 
-    implementation 'com.google.guava:guava:27.1-android'
+    implementation 'com.google.guava:guava:30.1.1-jre'
 
     // For how to setup gradle dependencies in Android X, see:
     // https://developer.android.com/training/testing/set-up-project#gradle-dependencies
     // Core library
     androidTestImplementation 'androidx.test:core:1.3.0'
     // CameraX
-    implementation "androidx.camera:camera-camera2:1.0.0-SNAPSHOT"
-    implementation "androidx.camera:camera-lifecycle:1.0.0-SNAPSHOT"
+    implementation 'androidx.camera:camera-camera2:1.1.0-alpha04'
+    implementation 'androidx.camera:camera-lifecycle:1.1.0-alpha04'
     implementation "androidx.camera:camera-view:1.0.0-SNAPSHOT"
     implementation 'com.google.mlkit:barcode-scanning:16.1.1'
 
@@ -109,7 +109,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
     // Object detection feature with bundled default classifier
-    implementation 'com.google.mlkit:object-detection:16.2.3'
+    implementation 'com.google.mlkit:object-detection:16.2.4'
 
     // Object detection feature with custom classifier support
     implementation 'com.google.mlkit:object-detection-custom:16.3.1'
